--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <version>3.7.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.6</version>
+        </dependency>
+
         <!-- Spring Boot Configuration Annotation Processor not configured -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
