--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,9 @@ build/
 .vscode/
 
 .mvn/
-/src/main/resources/logs/
+
+!/src/main/resources/logs/
+!/src/main/resources/logs/sql.log
+!/src/main/resources/logs/log_warn.log
+!/src/main/resources/logs/log_info.log
+!/src/main/resources/logs/log_error.log
